fix title wrap problem

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -34,6 +34,9 @@
 .grid-title {
   display: block;
   color: #333;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .grid-icon {
   display: block;
